--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0"
+        "php": "^7.3 || ^8.0",
+        "symfony/process": "^5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
